# Tool-Agent

./: .env.example  .gitignore  README.md  bart_ai_desktop.py  desktop_app.py  pyproject.toml
api/: __init__.py  deps.py  main.py  schemas.py
project/: index.html  package-lock.json  package.json  vite.config.ts
project/src/: App.tsx
project/src/components/: AppsPage.tsx  ChatInterface.tsx  SettingsPage.tsx  Sidebar.tsx  UsagePage.tsx
rag/: __init__.py  logging_setup.py
rag/agent/: mistral_client.py  orchestrator.py  policy.py  response_contract.py  schemas.py  tool_registry.py
rag/api/: auth_store.py  deps.py  main.py  observability.py  schemas.py  session_store.py
rag/integrations/: __init__.py  audio_vad.py  google_oauth.py  supabase_auth.py  supabase_rest.py  voxtral.py
rag/security/: __init__.py  guard.py  policy.py
rag/state/: __init__.py  audit_log.py  runs.py
rag/tools/: __init__.py  app_state.py  app_upload_files_to_drive.py  apps.py  documents.py  drive.py  email_send.py  fs.py  gmail.py  local_fs.py  rag_ingest_extracted.py  rag_search.py  system.py  uploads.py  web_fetch.py  web_search.py
sql/migrations/: 001_chat_backup_supabase.sql  002_token_usage_supabase.sql
tests/: test_orchestrator_run_logging.py  test_policy_endpoints.py  test_runs_endpoints.py  test_security_guard.py
